# purebred

./: .gitignore  .mailmap  .travis.yml  HACKING  README.md  TESTING.md  cabal.haskell-ci  default.nix  flake.nix  ghc-purebred.spec  purebred.cabal  purebred.spec  stack.yaml
.github/: haskell-ci-github-containerimage.patch  haskell-ci-github.patch
.github/workflows/: haskell-ci.yml  lint.yml  nixos-ci-flakes.yml  nixos-ci.yml
.nix/: Cabal.nix  bimap.nix  brick.nix  dyre.nix  extra.nix  ghc-lib-parser-ex.nix  ghc-lib-parser.nix  ghc-lib.nix  haskeline.nix  hlint.nix  hs-notmuch.nix  hsnotmuch.nix  nixpkgs.nix  overlays.nix  purebred-email.nix  purebred-icu.nix  purebred.nix  tasty-tmux.nix  text-zipper.nix  typed-process.nix  vty-crossplatform.nix  vty-unix.nix  vty.nix
app/: Main.hs
configs/: aliases  config.hs  mutt.hs  purebred.hs
docs/man/: Makefile  index.adoc
docs/talks/bfpg2018/: Makefile  bfpg_roman_joost_2018.md  firstUI.cast  secUI.cast
docs/talks/lca2020/: Makefile  README.md  roman_joost_tasty_tmux.md
docs/usermanual/: Makefile
src/: Error.hs  Main.hs  Purebred.hs  Types.hs
src/Brick/: Haskeline.hs
src/Brick/Widgets/: StatefulEdit.hs
src/Config/: Main.hs  Types.hs
src/Data/Text/: Markup.hs
src/Network/Mail/Mime/: Lens.hs
src/Purebred/: Config.hs  Events.hs  LazyVector.hs  Plugin.hs  Plugin.hs-boot  System.hs  Tags.hs  Types.hs  Version.hs
src/Purebred/Brick/: Markup.hs
src/Purebred/Parsing/: Text.hs
src/Purebred/Plugin/: Internal.hs  Internal.hs-boot  TweakConfig.hs  UserAgent.hs
src/Purebred/Storage/: AddressBook.hs  Client.hs  Mail.hs  Notmuch.hs  Server.hs  Tags.hs
src/Purebred/Storage/AddressBook/: MuttAliasFile.hs
src/Purebred/System/: Directory.hs  Logging.hs  Process.hs
src/Purebred/Types/: AddressBook.hs  Display.hs  Error.hs  Event.hs  IFC.hs  Items.hs  LazyVector.hs  Mailcap.hs  Presentation.hs  String.hs  UI.hs
src/Purebred/Types/Parser/: ByteString.hs  Text.hs
src/Purebred/Types/Presentation/: MailBody.hs
src/Purebred/UI/: Actions.hs  App.hs  Attr.hs  Keybindings.hs  Notifications.hs  Utils.hs  Validation.hs  Views.hs  Widgets.hs
src/Purebred/UI/ComposeEditor/: Keybindings.hs  Main.hs
src/Purebred/UI/Draw/: Main.hs
src/Purebred/UI/FileBrowser/: Keybindings.hs  Main.hs
src/Purebred/UI/GatherHeaders/: Keybindings.hs
src/Purebred/UI/Help/: Keybindings.hs  Main.hs
src/Purebred/UI/Index/: Keybindings.hs  Main.hs
src/Purebred/UI/Mail/: Keybindings.hs  Main.hs
src/Purebred/UI/Status/: Main.hs
src/Storage/: Mail.hs  Notmuch.hs  ParsedMail.hs
src/UI/: Actions.hs  App.hs  Keybindings.hs  Notifications.hs  Pager.hs  Types.hs  Utils.hs  Validation.hs  Views.hs
src/UI/ComposeEditor/: Keybindings.hs  Main.hs
src/UI/Draw/: Compose.hs  Mail.hs  Main.hs
src/UI/Event/: Compose.hs  Mail.hs  Main.hs
src/UI/FileBrowser/: Keybindings.hs  Main.hs
src/UI/GatherHeaders/: Keybindings.hs  Main.hs
src/UI/Help/: Keybindings.hs  Main.hs
src/UI/Index/: Keybindings.hs  Main.hs
src/UI/Mail/: Keybindings.hs  Main.hs
src/UI/Status/: Main.hs
test/: LazyVector.hs  Main.hs  TestActions.hs  TestAddressBook.hs  TestMail.hs  TestTagParser.hs  TestTextParser.hs  TestUserAcceptance.hs  UAT.hs
test/data/: manipulateNotmuchQuery.golden  test.golden  viewMail.golden
test/data/Maildir/cur/: 1411520479.R4229011672963510425.url:2,S  1411520482.R17043720676467592585.url:2,S  1502418188.M630889P26155V000000000000FD03I0000000000A23153.url:2,RS  1518085271.R1289573891817669728.url  1518085501.R9273831218989493230.url
test/data/Maildir/new/: 1234567.RHTMLMail.url  1502941827.R15455991756849358775.url
tools/: Keybinding.hs
