cabal-version:       2.4
name:                purebred
version:             0.1.0.0
synopsis:            An mail user agent built around notmuch
description:
  .
  An MUA built around <https://notmuchmail.org/ notmuch>.
  Mutt-inspired console interface, but embracing the notmuch
  storage / search paradigm.
  .
  = Requirements
  .
  * GHC >= 8.4
  * notmuch
  * a local mailer (e.g. @sendmail@)
  .
  = Status
  .
  The project is in development and is not ready for serious use.
  Contributions are welcome (bug reports, feedback, doc, code, etc).
  See HACKING for more info.

homepage:            https://github.com/purebred-mua/purebred#readme
license:             AGPL-3.0-or-later
license-file:        LICENSE
author:              Róman Joost & Fraser Tweedale
maintainer:          frase@frase.id.au
copyright:           2017-2019  Purebred contributors
category:            Email
build-type:          Simple

-- these wildcard expressions require cabal >= 2.4
extra-source-files:
  README.md
  test/data/Maildir/**/*.url
  "test/data/Maildir/**/*.url_2,RS"
  configs/purebred.hs

tested-with:
  GHC==8.4.4, GHC==8.6.3

source-repository head
  type: git
  location: https://github.com/purebred-mua/purebred.git

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  default-language:    Haskell2010
  exposed-modules:     UI.App
                     , Error
                     , Types
                     , UI.Keybindings
                     , UI.Actions
                     , UI.Draw.Main
                     , UI.Index.Keybindings
                     , UI.Index.Main
                     , UI.Status.Main
                     , UI.ComposeEditor.Main
                     , UI.ComposeEditor.Keybindings
                     , UI.GatherHeaders.Keybindings
                     , UI.Mail.Main
                     , UI.Mail.Keybindings
                     , UI.Help.Main
                     , UI.Help.Keybindings
                     , UI.Utils
                     , UI.Views
                     , UI.Validation
                     , Purebred.Events
                     , Purebred.LazyVector
                     , Purebred.Tags
                     , Purebred.Parsing.Text
                     , Purebred.System.Directory
                     , Purebred.System.Process
                     , Purebred.System
                     , UI.FileBrowser.Main
                     , UI.FileBrowser.Keybindings
                     , Config.Main
                     , Storage.Notmuch
                     , Storage.ParsedMail
                     , Purebred
  other-modules:       Paths_purebred
                     , Purebred.Types.IFC
  autogen-modules:     Paths_purebred
  build-depends:       base >= 4.11 && < 5
                     , deepseq >= 1.4.2
                     , dyre >= 0.8.12
                     , lens
                     , brick >= 0.50.1
                     , text-zipper
                     , vty
                     , vector >= 0.12.0.0
                     , notmuch >= 0.3 && < 0.4
                     , text
                     , typed-process >= 0.2.1.0
                     , directory >= 1.2.5.0
                     , bytestring
                     , time >= 1.8
                     , case-insensitive
                     , optparse-applicative >= 0.13
                     , filepath
                     , mtl
                     , exceptions
                     , purebred-email >= 0.3 && < 0.4
                     , attoparsec
                     , containers
                     , mime-types
                     , random
                     , time
                     , temporary
                     , word-wrap

executable purebred
  hs-source-dirs:      app
  ghc-options:         -Wall -threaded
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.11 && < 5
                     , purebred

test-suite unit
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  ghc-options:         -Wall
  main-is:             Main.hs
  other-modules:       TestMail
                     , TestActions
                     , TestTagParser
                     , TestTextParser
                     , LazyVector
  default-language:    Haskell2010
  build-depends:       base
                     , purebred
                     , tasty
                     , tasty-hunit
                     , tasty-quickcheck
                     , quickcheck-instances
                     , bytestring
                     , text
                     , lens
                     , notmuch
                     , time
                     , brick
                     , vector
                     , attoparsec

test-suite uat
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  ghc-options:         -Wall -threaded
  main-is:             TestUserAcceptance.hs
  default-language:    Haskell2010
  build-depends:       base
                     , purebred-email >= 0.2
                     , tasty
                     , tasty-hunit
                     , tasty-tmux >= 0.1.0.2
                     , directory
                     , typed-process >= 0.2.4.0
                     , text
                     , bytestring
                     , temporary
                     , mtl
                     , lens
                     , filepath
                     , unix
