cabal-version:       2.4
name:                purebred
version:             2022.1
synopsis:            An mail user agent built around notmuch
description:
  .
  An MUA built around <https://notmuchmail.org/ notmuch>.
  Mutt-inspired console interface, but embracing the notmuch
  storage / search paradigm.
  .
  = Requirements
  .
  * GHC >= 8.8
  * notmuch
  * a local mailer (e.g. @sendmail@)
  .
  = Status
  .
  The project is in development and is not ready for serious use.
  Contributions are welcome (bug reports, feedback, doc, code, etc).
  See HACKING for more info.

homepage:            https://github.com/purebred-mua/purebred#readme
license:             AGPL-3.0-or-later
license-file:        LICENSE
author:              Róman Joost & Fraser Tweedale
maintainer:          frase@frase.id.au
copyright:           2017-2022  Purebred contributors
category:            Email
build-type:          Simple

-- these wildcard expressions require cabal >= 2.4
extra-source-files:
  README.md
  test/data/Maildir/**/*.url
  "test/data/Maildir/**/*.url_2,RS"
  configs/purebred.hs
  configs/aliases

tested-with:
  GHC ==8.8.4 || ==8.10.7 || ==9.0.2 || ==9.2.8 || ==9.4.7 || ==9.6.3 || ==9.8.1

source-repository head
  type: git
  location: https://github.com/purebred-mua/purebred.git

flag with_lazyvector
  description: Enables lazy loading of the thread listing (see issue #284 before enabling).
  default: False

common common
  default-language: Haskell2010
  ghc-options:
    -fhide-source-paths
    -Wall
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Werror=missing-methods
    -Wcompat
    -Wnoncanonical-monad-instances
    -Wredundant-constraints
    -Wmissing-export-lists
    -Wpartial-fields
  if impl(ghc >= 8.10)
    ghc-options:
      -Wunused-packages
  if impl(ghc >= 9.0)
    ghc-options:
      -Winvalid-haddock
      -Werror=unicode-bidirectional-format-characters
  if impl(ghc >= 9.2)
    ghc-options:
      -Wimplicit-lift
      -Woperator-whitespace
      -Wredundant-bang-patterns
  if impl(ghc >= 9.4)
    ghc-options:
      -Wredundant-strictness-flags
  build-depends:
    base >= 4.13 && < 5

library
  import: common
  hs-source-dirs:      src
  exposed-modules:     Purebred
                     , Purebred.Config
                     , Purebred.Plugin
                     , Purebred.Plugin.TweakConfig
                     , Purebred.Storage.Mail
                     , Purebred.Storage.Tags
                     , Purebred.Storage.AddressBook
                     , Purebred.Storage.AddressBook.MuttAliasFile
                     , Purebred.System
                     , Purebred.System.Process
                     , Purebred.System.Logging
                     , Purebred.Types
                     , Purebred.Types.Error
                     , Purebred.Types.Event
                     , Purebred.Types.LazyVector
                     , Purebred.Types.Mailcap
                     , Purebred.Types.Parser.ByteString
                     , Purebred.Types.Parser.Text
                     , Purebred.Types.Presentation
                     , Purebred.Types.Presentation.MailBody
                     , Purebred.Types.UI
                     , Purebred.Types.AddressBook
                     , Purebred.UI.Actions
                     , Purebred.UI.App
                     , Purebred.UI.Attr
                     , Purebred.UI.ComposeEditor.Keybindings
                     , Purebred.UI.ComposeEditor.Main
                     , Purebred.UI.Draw.Main
                     , Purebred.UI.FileBrowser.Keybindings
                     , Purebred.UI.FileBrowser.Main
                     , Purebred.UI.GatherHeaders.Keybindings
                     , Purebred.UI.Help.Keybindings
                     , Purebred.UI.Help.Main
                     , Purebred.UI.Index.Keybindings
                     , Purebred.UI.Index.Main
                     , Purebred.UI.Keybindings
                     , Purebred.UI.Mail.Keybindings
                     , Purebred.UI.Mail.Main
                     , Purebred.UI.Notifications
                     , Purebred.UI.Status.Main
                     , Purebred.UI.Utils
                     , Purebred.UI.Validation
                     , Purebred.UI.Views
                     , Purebred.UI.Widgets
                     , Purebred.Version
  other-modules:       Paths_purebred
                     , Purebred.Storage.Client
                     , Purebred.Storage.Server
                     , Purebred.Types.IFC
                     , Purebred.Types.Items
                     , Purebred.Types.String
                     , Purebred.Plugin.Internal
                     , Purebred.Plugin.UserAgent
  autogen-modules:     Paths_purebred
  build-depends:       stm >= 2.4
                     , stm-delay >= 0.1
                     , deepseq >= 1.4.2
                     , dyre >= 0.9.1
                     , lens
                     , brick >= 2.9 && < 2.10
                     , text-zipper
                     , vty >= 6
                     , vector >= 0.12.0.0
                     , notmuch >= 0.3.1 && < 0.4
                     , text
                     , typed-process >= 0.2.8.0
                     , directory >= 1.2.5.0
                     , bytestring
                     , time >= 1.8
                     , case-insensitive
                     , optparse-applicative >= 0.13
                     , filepath
                     , mtl >= 2.2 && < 2.4
                     , exceptions
                     , purebred-email >= 0.5 && < 0.7
                     , attoparsec
                     , containers
                     , mime-types
                     , random >= 1.2.0
                     , time
                     , temporary
                     , word-wrap

  if flag(with_lazyvector)
    cpp-options: -DLAZYVECTOR

executable purebred
  import: common
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded
  build-depends:       purebred

test-suite unit
  import: common
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Main.hs
  other-modules:       TestMail
                     , TestActions
                     , TestTagParser
                     , TestAddressBook
                     , LazyVector
  build-depends:       purebred
                     , purebred-email
                     , tasty
                     , tasty-hunit
                     , tasty-quickcheck
                     , quickcheck-instances
                     , bytestring
                     , text
                     , lens
                     , notmuch
                     , time
                     , vector

test-suite uat
  import: common
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  ghc-options:         -threaded
  main-is:             TestUserAcceptance.hs
  build-depends:       purebred-email
                     , tasty
                     , tasty-hunit
                     , tasty-tmux >= 0.1.0.2
                     , directory
                     , typed-process >= 0.2.4.0
                     , text
                     , bytestring
                     , temporary
                     , mtl
                     , lens
                     , filepath
                     , unix
